--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -73,6 +73,7 @@
               (saveGraphEmmiter)="handleSaveAsToBrowser($event)"
               (removeLabelEmmiter)="removeDotSrcLabel()"
               (downloadGraphEmmiter)="downloadGraph()"
+              (setGraphStatusEmmiter)="setStatusGraph($event)"
               (projectEmmiter)="updateProject($event)">
             </app-tool-bar>
 
