UI: flowunit path display update

--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -814,8 +814,9 @@
                             <d-form-control>
                                 <textarea 
                                     dTextarea 
+                                    id="flowScanPath"
                                     name="dir" 
-                                    [(ngModel)]="formData.flowunitDebugPath">
+                                    [value]="formData.flowunitDebugPathForDisplay">
                                 </textarea>
                             </d-form-control>
                         </d-form-item>
