UI: fix bug of timer

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -74,7 +74,8 @@
               (removeLabelEmmiter)="removeDotSrcLabel()"
               (downloadGraphEmmiter)="downloadGraph()"
               (setGraphStatusEmmiter)="setStatusGraph($event)"
-              (projectEmmiter)="updateProject($event)">
+              (projectEmmiter)="updateProject($event)"
+              (getGraphFileTimeEmmitter)="getGraphFileTime($event)">
             </app-tool-bar>
 
             <div style="flex: 2;" class="graph">
