--- a/src/app/components/management/management.component.html
+++ b/src/app/components/management/management.component.html
@@ -72,7 +72,7 @@
                 style="margin-bottom: 10px">
                 <d-select 
                   class="template-select"
-                  [placeholder]="'Template Structure'"
+                  [placeholder]="'requestTemplate' | translate"
                   (valueChange)="templateChange($event)" 
                   [allowClear]="true" 
                   [(ngModel)]="selectTemplate"
@@ -120,7 +120,7 @@
             </div>
             <fieldset class="title-fieldset">
               <legend class="inner">
-                Request
+                <span style="font-size: 14px;">Request</span>
               </legend>
             </fieldset>
             <div 
@@ -162,12 +162,12 @@
               class="splitter-border" 
               orientation="vertical" 
               [disabledBarSize]="'2px'">
-              <d-splitter-pane size="230px">
+              <d-splitter-pane size="180px">
                 <ace 
                   *ngIf="choose === 'Body'" 
                   class="app-ace-editor" 
                   #editor 
-                  style="height: 80%;" 
+                  style="height: 90%;" 
                   [config]="config"
                   [mode]="'dot'" 
                   [value]="jsonSrc" 
@@ -260,7 +260,12 @@
                   </d-data-table>
                 </div>
               </d-splitter-pane>
-              <d-splitter-pane size="180px" style="overflow: hidden">
+              <d-splitter-pane size="180px">
+                <fieldset class="title-fieldset">
+                  <legend class="inner">
+                    <span style="font-size: 14px;">Response</span>
+                  </legend>
+                </fieldset>
                 <div 
                   class="flex-space-between" 
                   style="width:100%;height:28px;">
@@ -287,7 +292,7 @@
                   class="app-ace-editor" 
                   *ngIf="showResponse" 
                   #editor 
-                  style="height: 76%"
+                  style="height: 90%"
                   [config]="config" 
                   [value]="responseSrc" 
                   (valueChange)="handleChange1($event)" 
