UI: fix debounce function && ports && sync

--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -1,4 +1,4 @@
-<div id="tool-bar" class="tool-bar">
+<div id="tool-bar" class="tool-bar" dLoading [loading]="loading">
     <div class="tool-bar-left btn-group">
         <d-button
           id="undo"
