UI: hide attribute when click outside

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -133,7 +133,8 @@
   <div>
     <app-attribute-panel
       style="z-index:5"
-      id="attribute-area"
+      id="attribute"
+      #attribute
       class="half-drawer"
       *ngIf="currentComponent"
       [config]="currentComponent"
