UI:keep graph status after synchronization of graph

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -76,7 +76,9 @@
               (setGraphStatusEmmitter)="setStatusGraph($event)"
               (projectEmmitter)="updateProject($event)"
               (getGraphFileTimeEmmitter)="getGraphFileTime($event)"
-              (startTimerGetGraphFileNameEmmitter)="startTimerGetGraphFileName($event,null,null,null)">
+              (startTimerGetGraphFileNameEmmitter)="startTimerGetGraphFileName($event,null,null,null)"
+              (isAttrExistEmmitter)="isAttrExist()"
+              (addDotSrcLabelEmmitter)="addDotSrcLabel()">
             </app-tool-bar>
 
             <div style="flex: 2;" class="graph">
