UI: remove extend graph

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -77,8 +77,7 @@
               (projectEmmitter)="updateProject($event)"
               (getGraphFileTimeEmmitter)="getGraphFileTime($event)"
               (startTimerGetGraphFileNameEmmitter)="startTimerGetGraphFileName($event,null,null,null)"
-              (isAttrExistEmmitter)="isAttrExist()"
-              (addDotSrcLabelEmmitter)="addDotSrcLabel()">
+              (isAttrExistEmmitter)="isAttrExist()">
             </app-tool-bar>
 
             <div style="flex: 2;" class="graph">
