UI: limit the name of project && add rockchip

--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -232,7 +232,8 @@
                         <input 
                             dTextInput 
                             name="project_name" 
-                            [(ngModel)]="formDataCreateProject.name" 
+                            [(ngModel)]="formDataCreateProjectName"
+                            (input)="projectNameOnChange($event)"
                             maxlength="31"/>
                     </div>
                 </d-form-control>
