--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -232,8 +232,7 @@
                         <input 
                             dTextInput 
                             name="project_name" 
-                            [(ngModel)]="formDataCreateProjectName"
-                            (input)="projectNameOnChange($event)"
+                            [(ngModel)]="formDataCreateProject.name" 
                             maxlength="31"/>
                     </div>
                 </d-form-control>
@@ -708,9 +707,30 @@
                 </d-form-label>
                 <d-form-control style="height:32px">
                     <d-tabs 
+                        *ngIf="currentDevice === 'cpu'"
                         [(activeTab)]="formDataCreateFlowunit['virtual-type']" 
                         type="slider">
-                        <d-tab *ngFor="let item of typesCurrent" [id]="item.id">
+                        <d-tab *ngFor="let item of typesCpu" [id]="item.id">
+                            <ng-template dTabTitle>
+                                {{ item.title }}
+                            </ng-template>
+                        </d-tab>
+                    </d-tabs>
+                    <d-tabs 
+                        *ngIf="currentDevice === 'cuda'"
+                        [(activeTab)]="formDataCreateFlowunit['virtual-type']" 
+                        type="slider">
+                        <d-tab *ngFor="let item of typesCuda" [id]="item.id">
+                            <ng-template dTabTitle>
+                                {{ item.title }}
+                            </ng-template>
+                        </d-tab>
+                    </d-tabs>
+                    <d-tabs 
+                        *ngIf="currentDevice === 'ascend'"
+                        [(activeTab)]="formDataCreateFlowunit['virtual-type']" 
+                        type="slider">
+                        <d-tab *ngFor="let item of typesAscend" [id]="item.id">
                             <ng-template dTabTitle>
                                 {{ item.title }}
                             </ng-template>
