UI: update guide

--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -899,6 +899,10 @@
             {{'description.6' | translate}}
         </p>
         <br/>
+        <p class="description">
+            {{'description.7' | translate}}
+        </p>
+        <br/>
         <br/>
         <p class="description">
             {{'description.content' | translate}}
